--- a/Movie Review/package.json
+++ b/Movie Review/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-player": "^2.11.2",
